# jcfszxc

./: .gitignore  README.md
0_calibrationTool/: 编译脚本.cmd
0_calibrationTool/src/: main.py
0_calibrationTool/src/config/: settings.py
0_calibrationTool/src/core/: calibration.py  feature_matching.py  image_processor.py
0_calibrationTool/src/gui/: image_display_widget.py  main_window.py
0_calibrationTool/src/gui/widgets/: image_display_widget.py  point_pair_widget.py
0_calibrationTool/src/utils/: image_utils.py
0_taskManager/: README.md  requirements.txt
0_taskManager/docs/: README.md
0_taskManager/src/: config.py  constants.py  main.py
0_taskManager/src/controllers/: task_controller.py
0_taskManager/src/models/: database.py
0_taskManager/src/utils/: logger.py
0_taskManager/src/views/: main_window.py
0_taskManager/task_manager.egg-info/: PKG-INFO  SOURCES.txt
0_taskManager/tests/: test_validators.py
0_task_manager/: README.md  pyproject.toml  setup.py
0_task_manager/data/: tasks.db
0_task_manager/src/models/: task.py
0_task_manager/src/utils/: validators.py
0_task_manager/src/views/: dialogs.py  task_widget.py
0_task_manager/tests/: test_controllers.py  test_models.py
1_weatherApp/: .env  config.py  main.py
1_weatherApp/src/core/: api.py  data_models.py
1_weatherApp/src/ui/: main_window.py  styles.py  weather_widget.py
1_weather_app/: README.md  requirements.txt
1_weather_app/src/core/: utils.py
2_number_converter/: base_converter_gui.py
3_videoFrameExtractor/: main.py  requirements.txt
3_videoFrameExtractor/src/core/: utils.py
3_videoFrameExtractor/src/ui/: main_window.py  processing_dialog.py
3_video_frame_extractor/: README.md
3_video_frame_extractor/src/core/: video_processor.py
4_samFinetune/: sam_finetune_decoder.py  sam_finetune_encoder.py  setup_sam_data.py  show.py
4_samFinetune/stamps/: annotations.txt
5_autoLabelPlus/: README.md  category_dialog.py  category_dialog.ui  category_dialog_implementation.py  main.py  resizeableRect.py  ui_main.py  ui_main.ui  zoomable_graphics_view.py
6_quickJump/: demo.py
7_shipDetectionDemo/: CMakeLists.txt
7_shipDetectionDemo/include/: config_reader.h  object_detection.h  postprocess.h  tensor_utils.h  workflow.h
7_shipDetectionDemo/src/: config_reader.cpp  main.cpp  object_detection.cpp  postprocess.cc  tensor_utils.cpp  workflow.cpp
8_calibrationTool/: pyproject.toml
8_calibrationTool/src/calibration_tool/: __init__.py  __main__.py
8_calibrationTool/src/calibration_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
8_calibrationTool/src/calibration_tool/config/: settings.py
8_calibrationTool/src/calibration_tool/core/: calibration.py  image_processor.py
8_calibrationTool/src/calibration_tool/gui/: main_window.py
8_calibrationTool/src/calibration_tool/utils/: image_utils.py
Blog/Docker系列/: 1. Docker的安装.md  2. 加载本地Docker镜像.md  Docker 系列文章导航.md
Blog/Git系列/: 1. Git的安装.md  2. 设置 Git.md  3. 创建一个新的 Git 仓库.md  Git 系列文章导航.md
Blog/RKNN系列/: 1. 下载安装RKNN的docker镜像.md  2. 下载rknn-toolkit2项目.md  3. 测试Docker镜像.md  RKNN 系列文章导航.md
