[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration_tool"
version = "0.1.0"
description = "A calibration tool for visible-IR image pairs"
requires-python = ">=3.7"
dependencies = [
    "PyQt5>=5.15.0",
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
]

[project.scripts]
calibration-tool = "calibration_tool.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}